--- a/master.css
+++ b/master.css
@@ -1,3 +1,22 @@
-h1, h3, a {
+h1, h3, a, p {
   color: #38DE51;
+}
+body {
+  background-color: #212121;
+}
+
+h1 {
+  font-family: "Times New Roman";
+}
+
+h3 {
+
+}
+
+a {
+
+}
+
+p {
+
 }
